efluid-datagate-app/src/main/resources/static/css/loginPage.css
#logo-login {
    background-image: url("/logo.png");
    background-repeat: no-repeat;
    background-size: 100px 130px!important;
    width: 90px;
    height: 150px;
}

#row-app-login {
    width: 100%;
    height: 90vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

#container-login {
    width: 80%;
    height: 90vh;
    background-color: #EDEDED;
    display: flex;
    justify-content: center;
    align-items: center;
}

#container-logo {
    width: 100%;
    height: 160px;
    display: flex;
    justify-content: center;
    align-items: center;
}
#container-form-login {
    width: 80%;
	height: 80vh;
	background-color: #FFFFFF;
}

#form-login {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

#form-item {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

